--- a/app/src/main/res/layout/activity_web_view_layout.xml
+++ b/app/src/main/res/layout/activity_web_view_layout.xml
@@ -9,7 +9,28 @@
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         />
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/set_data"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:text="设置"
+            android:gravity="center"/>
+        <TextView
+            android:id="@+id/clear_data"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:gravity="center"
+            android:text="清除"/>
+    </LinearLayout>
     <WebView
         android:id="@+id/web_view"
         android:layout_width="match_parent"
