--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,11 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+
+   <style name="tab_title_style">
+       <item name="android:textSize">16sp</item>
+       <item name="android:textColor">@drawable/tab_title_selector</item>
+
+   </style>
+
 </resources>
